workspace/second/src/objects/CourseOffering__c.object
<CustomObject>
    <fields>
        <fullName>ClassRoom__c</fullName>
        <label>ClassRoom</label>
        <referenceTo>ClassRoom__c</referenceTo>
        <relationshipLabel>CourseOfferings</relationshipLabel>
        <relationshipName>CourseOfferings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CourseLastDate__c</fullName>
        <label>CourseLastDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CourseStartDate__c</fullName>
        <label>CourseStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>CourseOfferings</relationshipLabel>
        <relationshipName>CourseOfferings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CurrentSeatsOccupied__c</fullName>
        <label>CurrentSeatsOccupied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CourseOffering</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CourseOffering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CourseOfferings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>